--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     ],
     "require": {
         "yiisoft/yii2": "*",
-        "swiftmailer/swiftmailer": "*"
+        "swiftmailer/swiftmailer": "5.4.0"
     },
     "autoload": {
         "psr-4": { "yii\\swiftmailer\\": "" }
