--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,6 @@ php:
   - 7.0
   - hhvm
 
-services:
-  - mongodb
-
 # faster builds on new travis setup not using sudo
 sudo: false
 
@@ -20,7 +17,7 @@ cache:
 
 install:
   - travis_retry composer self-update && composer --version
-  - travis_retry composer global require "fxp/composer-asset-plugin:~1.1.1"
+  - travis_retry composer global require "fxp/composer-asset-plugin:^1.2.0"
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
   - travis_retry composer install --prefer-dist --no-interaction
 
