--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "yiisoft/yii2-swiftmailer",
+    "name": "devchunk/yii2-swiftmailer",
     "description": "The SwiftMailer integration for the Yii framework",
     "keywords": ["yii2", "swift", "swiftmailer", "mail", "email", "mailer"],
     "type": "yii2-extension",
@@ -19,7 +19,7 @@
     ],
     "require": {
         "yiisoft/yii2": "~2.0.4",
-        "swiftmailer/swiftmailer": "~5.0"
+        "devchunk/swiftmailer": "~5.0"
     },
     "autoload": {
         "psr-4": { "yii\\swiftmailer\\": "" }
