--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,12 @@
         "yiisoft/yii2": "~2.0.4",
         "swiftmailer/swiftmailer": "~6.0"
     },
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://asset-packagist.org"
+        }
+    ],
     "autoload": {
         "psr-4": { "yii\\swiftmailer\\": "" }
     },
