move source code to 'src' directory

--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         }
     ],
     "autoload": {
-        "psr-4": { "yii\\swiftmailer\\": "" }
+        "psr-4": { "yii\\swiftmailer\\": "src" }
     },
     "extra": {
         "branch-alias": {
