--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,14 @@
 {
     "name": "yiisoft/yii2-swiftmailer",
     "description": "The SwiftMailer integration for the Yii framework",
-    "keywords": ["yii2", "swift", "swiftmailer", "mail", "email", "mailer"],
+    "keywords": [
+        "yii2",
+        "swift",
+        "swiftmailer",
+        "mail",
+        "email",
+        "mailer"
+    ],
     "type": "yii2-extension",
     "license": "BSD-3-Clause",
     "support": {
@@ -28,7 +35,16 @@
         }
     ],
     "autoload": {
-        "psr-4": { "yii\\swiftmailer\\": "src" }
+        "psr-4": {
+            "yii\\swiftmailer\\": "src"
+        },
+        "files": [
+            "vendor/swiftmailer/swiftmailer/lib/dependency_maps/cache_deps.php",
+            "vendor/swiftmailer/swiftmailer/lib/dependency_maps/mime_deps.php",
+            "vendor/swiftmailer/swiftmailer/lib/dependency_maps/message_deps.php",
+            "vendor/swiftmailer/swiftmailer/lib/dependency_maps/transport_deps.php",
+            "vendor/swiftmailer/swiftmailer/lib/preferences.php"
+        ]
     },
     "extra": {
         "branch-alias": {
